--- a/Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.qmd
+++ b/Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.qmd
@@ -1,7 +1,82 @@
 ---
 title: "Hands-on Exercise 2: Creating Elegant Graphics with ggplot2"
 author: "Law Shiang Rou"
-date: "`r Sys.Date()`"
+date: 21 January 2023
+date-modified: "`r Sys.Date()`"
+execute: 
+  echo: true
+  eval: true
+  warning: false
 ---
 
-Test
+## Installing the packages
+```{r}
+pacman::p_load(tidyverse, patchwork, 
+               ggthemes, hrbrthemes, 
+               ggrepel)
+```
+## Importing the dataset
+```{r}
+exam_data <- read_csv("Exam_data.csv")
+```
+
+
+## Drawing a scatter plot
+```{r}
+ggplot(data=exam_data, 
+       aes(x=MATHS, y=ENGLISH))+
+  geom_point()+
+  coord_cartesian(xlim=c(0,100),
+                  ylim=c(0,100))+
+  geom_smooth(method=lm,size=0.5)+
+  geom_label_repel(aes(label=ID),fontface="bold")+
+  theme_bw()+
+  ggtitle("English Scores vs Maths Scores for Primary 3 Students")+ 
+  theme(plot.title = element_text(size=15, hjust = 0.5))
+```
+
+## Plotting a histogram
+```{r}
+ggplot(exam_data, 
+       aes(x=MATHS))+
+  geom_histogram(bins=20,
+                 boundary=100,
+                 color="grey10",
+                 fill="grey45")+
+  theme_ipsum(base_size=12, grid="Y") +
+  ggtitle("Distribution of Maths scores")+
+  theme(plot.title = element_text(size=15, hjust = 0.5))
+```
+## Creating composite plot using patchwork
+```{r}
+p1 <- ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey60") + 
+  coord_cartesian(xlim=c(0,100)) +
+  ggtitle("Distribution of Maths scores")
+
+p2 <- ggplot(data=exam_data, 
+             aes(x = ENGLISH)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey60") +
+  coord_cartesian(xlim=c(0,100)) +
+  ggtitle("Distribution of English scores")
+
+p3 <- ggplot(data=exam_data, 
+             aes(x= MATHS, 
+                 y=ENGLISH)) +
+  geom_point() +
+  geom_smooth(method=lm, 
+              size=0.5) +  
+  coord_cartesian(xlim=c(0,100),
+                  ylim=c(0,100)) +
+  ggtitle("English scores versus Maths scores for Primary 3")
+
+patchwork <- ((p1 + p2) / p3) + plot_annotation(tag_levels = "I")
+patchwork & theme_clean()
+```
