--- a/In-class_Exercise/In-class_Ex04.qmd
+++ b/In-class_Exercise/In-class_Ex04.qmd
@@ -16,17 +16,18 @@ format:
 editor: visual
 ---
 
-# Loading required packages
+# Part 1: Statistical visualization
+### Loading required packages
 ```{r}
 pacman::p_load(plotly, DT, patchwork, tidyverse, ggstatsplot)
 ```
 
-# Importing data
+### Importing data
 ```{r}
 exam_data <- read_csv("data/Exam_data.csv")
 ```
 
-# Working with Plot_ly() method
+### Working with Plot_ly() method
 ```{r}
 plot_ly(data = exam_data, 
         x = ~ENGLISH, 
@@ -34,7 +35,7 @@ plot_ly(data = exam_data,
         color = ~RACE)
 ```
 
-### Changing color with color palette
+#### Changing color with color palette
 ```{r}
 plot_ly(data = exam_data, 
         x = ~ENGLISH, 
@@ -43,7 +44,7 @@ plot_ly(data = exam_data,
         colors = "Set1")
 ```
 
-### Changing to self-defined colors
+#### Changing to self-defined colors
 ```{r}
 my_colors <- c("pink","skyblue","lightgreen","grey")
 plot_ly(data = exam_data, 
@@ -53,7 +54,7 @@ plot_ly(data = exam_data,
         colors = my_colors)
 ```
 
-# Working with ggplotly() method
+### Working with ggplotly() method
 ```{r}
 p <- ggplot(data=exam_data, 
             aes(x = MATHS,
@@ -64,7 +65,7 @@ p <- ggplot(data=exam_data,
 ggplotly(p)
 ```
 
-# Coordinated Multiple Views with plotly
+### Coordinated Multiple Views with plotly
 ```{r}
 d <- highlight_key(exam_data)  #<<
 p1 <- ggplot(data=d, 
@@ -84,7 +85,8 @@ subplot(ggplotly(p1),
         ggplotly(p2))
 ```
 
-# Working with ggstatsplot
+### Working with ggstatsplot
+#### Two-sample mean test: ggbetweenstats()
 ```{r}
 ggbetweenstats(
   data = exam_data,
@@ -95,3 +97,79 @@ ggbetweenstats(
 )
 ```
 
+#### Significant Test of Correlation: ggscatterstats()
+```{r}
+ggscatterstats(
+  data = exam_data,
+  x = MATHS,
+  y = ENGLISH,
+  marginal = TRUE,
+  )
+```
+
+
+# Part 2: Visualizing models
+### Loading packages
+```{r}
+pacman::p_load(readxl, performance, parameters, see)
+```
+### Importing data
+```{r}
+car_resale <- read_xls("data/ToyotaCorolla.xls", 
+                       "data")
+car_resale
+```
+
+### Multiple Regression Model using lm()
+```{r}
+model <- lm(Price ~ Age_08_04 + Mfg_Year + KM + 
+              Weight + Guarantee_Period, data = car_resale)
+model
+```
+
+### Model Diagnostic: checking for multicolinearity:
+```{r}
+check_collinearity(model)
+```
+### Visualize multicollinearity
+VIF, log scaled of more than 10 = multicollinearity that needs to be addressed.
+```{r}
+check_c <- check_collinearity(model)
+plot(check_c)
+```
+### Remove "Mfg_Year" from model due to collinearity
+```{r}
+model1 <- lm(Price ~ Age_08_04 + Weight + KM
+             + Guarantee_Period, data = car_resale)
+```
+
+### Check normality assumption
+```{r}
+check_n <- check_normality(model1)
+```
+```{r}
+plot(check_n)
+```
+### Check heteroscedasticity
+```{r}
+check_h <- check_heteroscedasticity(model1)
+```
+```{r}
+plot(check_h)
+```
+
+### Complete check
+```{r fig.height = 10, fig.width = 10, align = "center"}
+check_model(model1)
+```
+
+### Visualising Regression Parameters: see methods
+```{r}
+plot(parameters(model1))
+```
+
+### Visualising Regression Parameters: ggcoefstats() methods
+```{r}
+ggcoefstats(model1, 
+            output = "plot")
+```
